<resources>
    <string name="app_name">Incubator</string>

    <string name="title_activity_login">Incubator</string>

    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_profile">Profile</string>
    <string name="title_activity_main_ideas">Incubator</string>
    <string name="title_activity_idea_details">Idea Details</string>
    <string name="title_activity_add_idea">Add Idea</string>

    <!-- Strings for adding idea -->
    <string name="title">Title</string>
    <string name="desc">Description</string>
    <string name="collab">Add Collaborators</string>
    <string name="tags">Add Tags</string>
    <string name="pics">Add Images</string>

    <string name="title_activity_login2">Sign in</string>
    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Delete Account</string>
    <string name="new_pass">New Password</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Not a member? Get registered in Incubator now!</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="SetName">Enter Display Name</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
    <string name="welcome_msg1">Enter your Display Name to continue</string>
    <string name="welcome_msg2">Welcome to Incubator!</string>
    <string name="title_activity_notes">Notes</string>
    <string name="title_activity_add_note">Note</string>
    <string name="title_activity_shared_notes">Shared Notes</string>
    <string name="title_activity_view_note">Note</string>

    <string name="hint_message_text">Type a message&#8230;</string>
    <string name="error_empty_message">Please enter a message</string>
    <string name="error_message_failed">Failed to send your message</string>

</resources>
